update fix sonarqube